menambah list item baru

--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
         <li>Tes</li>
         <li>Tes</li>
     </ol>
+    <ol>
+        <li>Yuhu</li>
+        <li>Asik</li>
+        <li>Gas</li>
+    </ol>
 </body>
 </html>
